@@ -1408,4 +1408,12 @@
     `abc
     \x{1234}abc
 
+/^A\s+Z/8W
+    A\x{2005}Z
+    A\x{85}\x{180e}\x{2005}Z
+
+/^A[\s]+Z/8W
+    A\x{2005}Z
+    A\x{85}\x{180e}\x{2005}Z
+
 /-- End of testinput10 --/ 
